--- a/app/src/main/res/layout/activity_part_practice_ods3.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods3.xml
@@ -51,7 +51,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="맑"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton2"
@@ -65,7 +65,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="고"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton3"
@@ -79,7 +79,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="맑"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton4"
@@ -109,7 +109,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="은"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="옹"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton7"
@@ -136,7 +136,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="달"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="@+id/pitchbutton2"
@@ -150,7 +150,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="샘"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton7"
