--- a/app/src/main/res/layout/activity_part_practice_ods5.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods5.xml
@@ -51,7 +51,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="새"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton2"
@@ -66,7 +66,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="벽"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton3"
@@ -81,7 +81,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="에"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton2"
@@ -110,7 +110,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="토"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton6"
@@ -125,7 +125,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="끼"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton7"
@@ -140,7 +140,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="가"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton6"
