--- a/app/src/main/res/layout/activity_part_practice_ods7.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods7.xml
@@ -44,14 +44,14 @@
 
     <Button
         android:id="@+id/pitchButton1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="72dp"
+        android:layout_height="46dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="세"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton2"
@@ -67,7 +67,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="수"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton3"
@@ -81,7 +81,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="하"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="@+id/odsseventhscore"
@@ -111,7 +111,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="러"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintStart_toEndOf="@+id/pitchbutton8"
@@ -125,7 +125,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="왔"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton7"
@@ -138,7 +138,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="다"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="@+id/pitchbutton2"
@@ -152,7 +152,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="가"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton7"
