--- a/app/src/main/res/layout/activity_low_choice_song.xml
+++ b/app/src/main/res/layout/activity_low_choice_song.xml
@@ -39,7 +39,7 @@
 
     <ImageView
         android:layout_width="501dp"
-        android:layout_height="57dp"
+        android:layout_height="50dp"
         android:background="@drawable/buttonblack"
         app:layout_constraintBottom_toTopOf="@+id/song_middle3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
         android:fontFamily="@font/scdream2"
         android:paddingLeft="40dp"
         android:scaleType="centerInside"
-        android:text="@string/strBtn2"
+        android:text="학교 종이 땡땡땡"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="parent"
