--- a/app/src/main/res/layout/activity_part_practice_bear6.xml
+++ b/app/src/main/res/layout/activity_part_practice_bear6.xml
@@ -69,7 +69,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="으"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton2"
@@ -84,7 +84,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="쓱"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton3"
@@ -99,7 +99,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="으"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton2"
@@ -113,7 +113,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="쓱"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +128,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="잘"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton6"
@@ -143,7 +143,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="한"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton7"
@@ -158,7 +158,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="다"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton6"
