--- a/app/src/main/res/layout/activity_part_practice_ods7.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods7.xml
@@ -96,7 +96,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="-"
-        android:textColor="@color/white"
+        android:textColor="@color/selected_btn"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton3"
