--- a/app/src/main/res/layout/activity_part_practice_ods3.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods3.xml
@@ -181,8 +181,9 @@
         android:text="높아요!"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/pitchline"
-        app:layout_constraintEnd_toStartOf="@+id/pitchTextView"
-        app:layout_constraintStart_toStartOf="@+id/pitchTextView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/pitchline"
@@ -197,12 +198,14 @@
         android:id="@+id/lowpitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
+        android:layout_marginBottom="36dp"
         android:fontFamily="@font/scdream2"
         android:text="낮아요!"
         android:textSize="30dp"
-        app:layout_constraintStart_toStartOf="@+id/highpitch"
-        app:layout_constraintTop_toBottomOf="@+id/pitchline" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/next"
