--- a/app/src/main/res/layout/activity_choice_level.xml
+++ b/app/src/main/res/layout/activity_choice_level.xml
@@ -22,6 +22,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/home"
+        android:layout_width="43dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="2dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_baseline_home_24"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintStart_toEndOf="@+id/backtochoice"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
         android:id="@+id/levelhigh"
         android:layout_width="0dp"
         android:layout_height="0dp"
