--- a/app/src/main/res/layout/activity_low_choice_song.xml
+++ b/app/src/main/res/layout/activity_low_choice_song.xml
@@ -6,32 +6,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back"
-    tools:context=".MiddleChoiceSong">
+    tools:context=".LowChoiceSong">
 
     <Button
         android:id="@+id/backtochoice"
-        android:layout_width="43dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="45dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="290dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toLeftOf="@+id/odsfirstscore"
+        app:layout_constraintEnd_toStartOf="@+id/playVib"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
 
     <Button
         android:id="@+id/home"
-        android:layout_width="43dp"
-        android:layout_height="53dp"
+        android:layout_width="45dp"
+        android:layout_height="50dp"
         android:layout_marginTop="2dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_home_24"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintStart_toEndOf="@+id/backtochoice"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/song_plane"
@@ -52,28 +52,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:layout_width="501dp"
-        android:layout_height="57dp"
+        android:id="@+id/imageView3"
+        android:layout_width="411dp"
+        android:layout_height="48dp"
         android:background="@drawable/buttonblack"
         app:layout_constraintBottom_toTopOf="@+id/song_middle3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.588"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/song_plane"
-        app:layout_constraintVertical_bias="0.918" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/song_middle3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
         android:fontFamily="@font/scdream2"
         android:paddingLeft="40dp"
-        android:text="학교 종이 땡땡땡"
+        android:text="@string/strBtn3"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,8 +84,7 @@
     <Button
         android:id="@+id/song_middle2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_height="48dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
         android:fontFamily="@font/scdream2"
@@ -106,8 +105,8 @@
         android:layout_marginStart="56dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="41dp"
-        android:text="음역대 선택"
         android:fontFamily="@font/scdream2"
+        android:text="음역대 선택"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/radioGroup"
@@ -127,7 +126,7 @@
 
         <RadioButton
             android:id="@+id/man"
-            android:layout_width="73dp"
+            android:layout_width="78dp"
             android:layout_height="match_parent"
             android:fontFamily="@font/scdream2"
             android:text="남자" />
