--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -10,40 +10,45 @@
 
     <Button
         android:id="@+id/backtochoice"
-        android:layout_width="70dp"
-        android:layout_height="51dp"
+        android:layout_width="45dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="290dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toLeftOf="@+id/odsfirstscore"
+        app:layout_constraintEnd_toStartOf="@+id/playVib"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="359dp"
-        android:layout_height="600dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="356dp"
+        android:layout_height="502dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="68dp"
         android:layout_marginRight="10dp"
         android:fontFamily="@font/scdream2"
         android:text="씽씽은 듣는 것에 어려움을 겪고 있는 난청을 가진 분들을 대상으 만들어진 어플입니다. \n\n그분들이 조금이라도 편리하게 노래를 부를 수 있게 되는 것이 저희 개발팀의 가장 큰 목적입니다.\n\n해당 어플에 수록된 곡은 모두 동요이며, 어려운 정도에 따라 상중하로 나뉩니다. \n\n이 어플의 주요 기능은 사용자가 내는 음정과 악보의 음을 비교한 결과를 화면에 띄워서 사용자가 정확한 음을 낼 수 있도록 도와주는 것 입니다."
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/forward"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="584dp"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="536dp"
         android:background="@drawable/ic_baseline_arrow_forward_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
