--- a/app/src/main/res/layout/activity_manual5.xml
+++ b/app/src/main/res/layout/activity_manual5.xml
@@ -10,61 +10,65 @@
 
     <Button
         android:id="@+id/backtochoice"
-        android:layout_width="70dp"
-        android:layout_height="51dp"
+        android:layout_width="45dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="290dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toLeftOf="@+id/odsfirstscore"
+        app:layout_constraintEnd_toStartOf="@+id/playVib"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
 
 
     <ImageView
-        android:layout_width="206dp"
-        android:layout_height="332dp"
+        android:layout_width="186dp"
+        android:layout_height="282dp"
         android:background="@drawable/menual4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.804" />
+        app:layout_constraintVertical_bias="0.864" />
 
     <TextView
-        android:layout_width="359dp"
-        android:layout_height="600dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="344dp"
+        android:layout_height="218dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="60dp"
         android:layout_marginRight="10dp"
         android:fontFamily="@font/scdream2"
-        android:text="“낮아요!”가 표시된다면 음정을 조금씩 높이고, “높아요!”가 표시된다면 음정을 조금씩 낮추며 정확한 음정을 찾는 연습을 하시면 됩니다.\n음정이 정확할 경우, 다음과 같이 “정확해요!”라는 글이 화면에 보이게 됩니다. "
+        android:text="“낮아요!”가 표시된다면 음정을 조금씩 높이고, “높아요!”가 표시된다면 음정을 조금씩 낮추며 정확한 음정을 찾아가면 됩니다.\n음정이 정확할 경우, 다음과 같이 “정확해요!”라는 글이 화면에 보이게 됩니다. "
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/backward"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="624dp"
+        android:layout_marginTop="536dp"
         android:background="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintHorizontal_bias="0.094"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/forward"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="624dp"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="536dp"
         android:background="@drawable/ic_baseline_arrow_forward_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
